
  ZOOKEEPER-2119 Netty client docs (Hongchao via rakeshr)

  ZOOKEEPER-2125 SSL on Netty client-server communication (Hongchao, Ian Dimayuga via rakeshr)

  ZOOKEEPER-2123 Provide implementation of X509 AuthenticationProvider
  (Ian Dimayuga via rakeshr)

  ZOOKEEPER-2163: Introduce new ZNode type: container (Jordan Zimmerman via rgs)

BUGFIXES:
  ZOOKEEPER-1784 wrong check for COMMITANDACTIVATE in observer code, Learner.java (rgs via shralex).

  ZOOKEEPER-2047 testTruncationNullLog fails on windows (flavio via rakeshr)

  ZOOKEEPER-2026 Startup order in ServerCnxnFactory-ies is wrong (Stevo Slavic via rakeshr)

  ZOOKEEPER-2058 rat: exclude *.cer files  (michim via rakeshr)

  ZOOKEEPER-2049 Yosemite build failure: htonll conflict (Till Toenshoff via
  michim)

  ZOOKEEPER-2052 Unable to delete a node when the node has no children
  (Hongchao Deng and Yip Ng via rakeshr)

  ZOOKEEPER-2064 Prevent resource leak in various classes (Ted Yu via fpj)
  
  ZOOKEEPER-2060 Trace bug in NettyServerCnxnFactory (Ian via fpj)

  ZOOKEEPER-2072 Netty Server Should Configure Child Channel Pipeline By Specifying 
  ChannelPipelineFactory (Hongchao via rakeshr)

  ZOOKEEPER-2111 Not isAlive states should be synchronized in ClientCnxn 
  (Hongchao via rakeshr)

  ZOOKEEPER-1366 Zookeeper should be tolerant of clock adjustments (Hongchao
  Deng via michim)

  ZOOKEEPER-1949 recipes jar not included in the distribution package (Rakesh R
  via michim)

  ZOOKEEPER-2114 jute generated allocate_* functions are not externally visible
  (Tim Crowder via michim)

  ZOOKEEPER-2073 Memory leak on zookeeper_close (Dave Gosselin via michim)

  ZOOKEEPER-1952 Default log directory and file name can be changed 
  (nijel, Hari Krishna Dara via rakeshr)

  ZOOKEEPER-2134 AsyncHammerTest.testHammer fails intermittently
  (Michi Mutsuzaki via rakeshr)

  ZOOKEEPER-2137 Make testPortChange() less flaky (Hongchao Deng via michim)
